--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,24 @@
+---
+import {Header} from '../components/sections/Header';
+import Footer from '../components/sections/Footer.astro';
+import "../styles/global.css";
+const { title = "Joyería Siesquén" } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale = 1.0" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
+		<meta name="author" content="Alvaro Siesquén">
+		<meta name="keywords" content="joyeria, oro">
 	</head>
-	<body>
-		<slot />
+	<body class="bg-pearl-1 font-heading">
+		<Header client:load/>
+		<slot/>
+		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
