--- a/src/components/sections/FeaturedCollection.astro
+++ b/src/components/sections/FeaturedCollection.astro
@@ -12,7 +12,7 @@ import FeaturedCollectionCard from "../cards/FeaturedCollectionCard.astro"
                     category = "Anillos"
                     name = "Anillo de Diamante Clásico"
                     price = 15.20
-                    image_url = "../src/assets/products/1.jpeg"
+                    image_url = "./products/1.jpeg"
                     url = 'http://lamicenterperu.com/'
                 />
             </div>
@@ -21,7 +21,7 @@ import FeaturedCollectionCard from "../cards/FeaturedCollectionCard.astro"
                     category = "Anillos"
                     name = "Anillo de Diamante Clásico"
                     price = 15.20
-                    image_url = "../src/assets/products/1.jpeg"
+                    image_url = "./products/1.jpeg"
                     url = 'http://lamicenterperu.com/'
                 />
             </div>
@@ -30,7 +30,7 @@ import FeaturedCollectionCard from "../cards/FeaturedCollectionCard.astro"
                     category = "Anillos"
                     name = "Anillo de Diamante Clásico"
                     price = 15.20
-                    image_url = "../src/assets/products/1.jpeg"
+                    image_url = "./products/1.jpeg"
                     url = 'http://lamicenterperu.com/'
                 />
             </div>
