Add the main pages to the website

--- a/src/components/cards/OurCategoriesCard.astro
+++ b/src/components/cards/OurCategoriesCard.astro
@@ -1,6 +1,6 @@
 ---
 const {category, description, image_url, detail} = Astro.props;
-import { RingIcon } from "../icons/RingIcon";
+import { RingIcon } from "@/components/icons/RingIcon";
 
 ---
 
