--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Hero from '../components/sections/Hero.astro';
-import OurCategories from '../components/sections/OurCategories.astro';
-import FeaturedCollection from '../components/sections/FeaturedCollection.astro';
-import Layout from '../layouts/Layout.astro';
+import Hero from '@/components/sections/home/Hero.astro';
+import OurCategories from '@/components/sections/home/OurCategories.astro';
+import FeaturedCollection from '@/components/sections/home/FeaturedCollection.astro';
+import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout>
