--- a/src/components/sections/layout/Footer.astro
+++ b/src/components/sections/layout/Footer.astro
@@ -1,17 +1,17 @@
 <section id="footer">
-    <div class="footer-container py-16 flex justify-around gap-4 bg-[#12080b] text-white">
-        <div class="footer-content">
+    <div class="py-16 flex justify-around gap-4 bg-[#12080b] text-white">
+        <div>
             <h3 class="text-xl font-bold">Lucent</h3>
             <p>Joyería fina artesanal de la más alta calidad</p>
         </div>
-        <div class="footer-content">
+        <div>
             <h4>Tienda</h4>
             <p>Catálogo</p>
             <p>Colecciones</p>
             <p>Ofertas</p>
             <p>Nuevo</p>
         </div>
-        <div class="footer-content">
+        <div>
             <h4>Atención al cliente</h4>
             <p>Contacto</p>
             <p>Envíos</p>
